--- a/aws-integrations/aws-shipper-lambda/template.yaml
+++ b/aws-integrations/aws-shipper-lambda/template.yaml
@@ -83,7 +83,10 @@ Metadata:
           - BlockingPattern
           - SamplingRate
           - AddMetadata
-
+      - Label:
+          default: Kinesis configuration
+        Parameters:
+          - KinesisStreamArn
 
       - Label:
           default: Lambda configuration
