--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -182,10 +182,12 @@ jobs:
           "https://api.github.com/repos/coralogix/coralogix-aws-shipper/pulls?state=closed&base=master&sort=updated&direction=desc" \
           | jq -r '.[0].title')
           if [[  $commit_message == $last_pr_from_serverless ]]; then
+            pr_name=$last_pr_from_serverless
             pr_url=$(curl -s -H "Authorization: Bearer ${{ secrets.DESTINATION_REPO_TOKEN }}" \
             "https://api.github.com/repos/coralogix/coralogix-aws-serverless/pulls?state=closed&base=master&sort=updated&direction=desc" \
             | jq -r '.[0].html_url')
           elif [[ $commit_message == $last_pr_from_shipper ]]; then
+            pr_name=$last_pr_from_shipper
             pr_url=$(curl -s -H "Authorization: Bearer ${{ secrets.DESTINATION_REPO_TOKEN }}" \
             "https://api.github.com/repos/coralogix/coralogix-aws-shipper/pulls?state=closed&base=master&sort=updated&direction=desc" \
             | jq -r '.[0].html_url')
