--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -21,7 +21,7 @@ jobs:
       has_file_from_the_list_changed: ${{ env.has_template_from_the_list_changed }}
     name: upload files
     env:
-      integration_list: "firehose-logs,firehose-metrics,resource-metadata,aws-shipper-lambda"
+      integration_list: "firehose-logs,firehose-metrics,resource-metadata,aws-shipper-lambda,resource-metadata-sqs"
     steps:
       - name: checkout when trigger is from push
         uses: actions/checkout@v4
@@ -97,7 +97,7 @@ jobs:
       - name: Checkout destination repository
         uses: actions/checkout@v4
         with:
-          repository: coralogix/integration-definitions
+          repository: guyrenny/test
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Create template-directory
@@ -180,7 +180,7 @@ jobs:
         uses: planetscale/ghcommit-action@v0.1.19
         with:
           commit_message: "Copy file from cloudformation repository"
-          repo: coralogix/integration-definitions
+          repo: guyrenny/test
           branch: ${{env.branch_name}}
           file_pattern: '*.yaml *.md'
         env:
